@@ -3,21 +3,21 @@ package org.deftserver.io;
 import static com.google.common.collect.Collections2.transform;
 
 import java.io.IOException;
-import java.lang.management.ManagementFactory;
 import java.nio.channels.ClosedChannelException;
 import java.nio.channels.SelectableChannel;
 import java.nio.channels.SelectionKey;
 import java.nio.channels.Selector;
+import java.nio.channels.SocketChannel;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 
-import javax.management.MBeanServer;
-import javax.management.ObjectName;
-
-import org.deftserver.web.Timeout;
+import org.deftserver.io.timeout.JMXConfigurableTimeoutManager;
+import org.deftserver.io.timeout.Timeout;
+import org.deftserver.io.timeout.TimeoutManager;
+import org.deftserver.util.MXBeanUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -32,14 +32,12 @@ public enum IOLoop implements IOLoopMXBean {
 	private final Logger logger = LoggerFactory.getLogger(IOLoop.class);
 
 	private static final long TIMEOUT = 250;	// 0.25s in ms
-	private static final long TIMEOUT_CALLBACK_PERIOD = 2 * 1000;	//2s in ms
 
 	private Selector selector;
-	private long lastTimeout;
 	
 	private final Map<SelectableChannel, IOHandler> handlers = Maps.newHashMap();
-	private final List<Timeout> timeouts = Lists.newLinkedList();
-	private final Map<SelectableChannel, Timeout> keepAliveTimeouts = Maps.newHashMap();
+	
+	private final TimeoutManager tm = new JMXConfigurableTimeoutManager();
 	
 	private IOLoop() {
 		try {
@@ -47,27 +45,16 @@ public enum IOLoop implements IOLoopMXBean {
 		} catch (IOException e) {
 			logger.error("Could not open selector: {}", e.getMessage());
 		}
-		registerMXBean();
+		MXBeanUtil.registerMXBean(this, "org.deftserver.web:type=IOLoop");
 	}
 	
-	private void registerMXBean() {
-		MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
-        String mbeanName = "org.deftserver.web:type=IOLoop";
-        try {
-            mbs.registerMBean(this, new ObjectName(mbeanName));
-        }
-        catch (Exception e) {
-            logger.error("Unable to register {} MXBean: {}", this.getClass().getCanonicalName(), e);
-        }
-	}
-
 	public void start() {
 		Thread.currentThread().setName("I/O-LOOP");
 
 		while (true) {
 			try {
 				if (selector.select(TIMEOUT) == 0) {
-					invokeTimeouts();
+					tm.execute();
 					continue;
 				}
 
@@ -86,38 +73,11 @@ public enum IOLoop implements IOLoopMXBean {
 					}
 					keys.remove();
 				}
-				invokeTimeouts();
+				tm.execute();
 
 			} catch (IOException e) {
 				logger.error("Exception received in IOLoop: {}", e);			
 			}
-		}
-	}
-
-	private void invokeTimeouts() {
-		long now = System.currentTimeMillis();
-		if (now >= lastTimeout + TIMEOUT_CALLBACK_PERIOD) {
-			Iterator<Timeout> iter = timeouts.iterator();
-			while (iter.hasNext()) {
-				Timeout candidate = iter.next();
-				if (candidate.getTimeout() <= now) {
-					candidate.getCallback().onCallback();
-					iter.remove();
-					logger.debug("generic timeout triggered: {}", candidate);
-				}
-			}
-		
-			iter = keepAliveTimeouts.values().iterator();
-			while (iter.hasNext()) {
-				Timeout candidate = iter.next();
-				if (candidate.getTimeout() <= now) {
-					candidate.getCallback().onCallback();
-					iter.remove();
-					logger.debug("keep-alive timeout triggered: {}", candidate);
-				}
-			}
-
-			lastTimeout = now;
 		}
 	}
 
@@ -128,20 +88,6 @@ public enum IOLoop implements IOLoopMXBean {
 	
 	public void removeHandler(SelectableChannel channel) {
 		handlers.remove(channel);
-	}
-	
-	public void addTimeout(Timeout timeout) {
-		logger.debug("added generic timeout: {}", timeout);
-		timeouts.add(timeout);
-	}
-	
-	public void addKeepAliveTimeout(SelectableChannel channel, Timeout timeout) {
-		logger.debug("added keep-alive timeout: {}", timeout);
-		keepAliveTimeouts.put(channel, timeout);
-	}
-	
-	public boolean hasKeepAliveTimeout(SelectableChannel channel) {
-		return keepAliveTimeouts.containsKey(channel);
 	}
 	
 //	public <T> void addCallback(AsyncResult<T> cb) {
@@ -157,22 +103,23 @@ public enum IOLoop implements IOLoopMXBean {
 		}		
 		return null;
 	}
-
+	
+	public void addKeepAliveTimeout(SocketChannel channel, Timeout keepAliveTimeout) {
+		tm.addKeepAliveTimeout(channel, keepAliveTimeout);
+	}
+	
+	public boolean hasKeepAliveTimeout(SelectableChannel channel) {
+		return tm.hasKeepAliveTimeout(channel);
+	}
+	
+	public void addTimeout(Timeout timeout) {
+		tm.addTimeout(timeout);
+	}
 	
 // implements IOLoopMXBean
 	@Override
-	public int getNumberOfKeepAliveTimeouts() {
-		return keepAliveTimeouts.size();
-	}
-
-	@Override
 	public int getNumberOfRegisteredIOHandlers() {
 		return handlers.size();
-	}
-
-	@Override
-	public int getNumberOfTimeouts() {
-		return timeouts.size();
 	}
 
 	@Override
@@ -187,11 +134,6 @@ public enum IOLoop implements IOLoopMXBean {
 	@Override
 	public long getSelectorTimeout() {
 		return TIMEOUT;
-	}
-
-	@Override
-	public long getTimeoutCallbackPeriod() {
-		return TIMEOUT_CALLBACK_PERIOD;
 	}
 
 }
