@@ -2,8 +2,8 @@ package org.deftserver.io;
 
 import static org.junit.Assert.assertEquals;
 
+import org.deftserver.io.timeout.Timeout;
 import org.deftserver.web.AsyncCallback;
-import org.deftserver.web.Timeout;
 import org.junit.Test;
 
 public class TimeoutTest {
