@@ -12,6 +12,7 @@ Features
     - JMX monitoring (read only) for IOLoop (#68)
     - Configurable knobs, e.g. keep-alive timeout, read/write buffer sizes. (#57, #67)
     - java.nio.ByteBuffer reuse (byte[] allocation is expensive) (#77)
+    - Configurable timeouts handling (#80)
          
 Configuration
 ------------
